[package]
name    = "esp32c6-rtos"
version = "0.1.0"
edition = "2021"

[dependencies]

esp-hal = { version = "~1.0", features = ["esp32c6", "unstable"] }
esp-rtos = { version = "0.2", features = ["esp32c6", "embassy", "log-04"] }
embassy-executor = "0.9"
embassy-time     = "0.5"
embassy-sync     = "0.7"
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32c6"] }
esp-backtrace = { version = "0.18", features = [
    "esp32c6",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.16", features = ["esp32c6", "log-04"] }
log = "0.4"
heapless          = "0.9.2"  
embedded-io-async = "0.7.0"  
embedded-hal-async = "1.0.0"

[profile.dev]
opt-level = "s"   

[profile.release]
opt-level     = "s"
debug         = true   
lto           = "fat"
codegen-units = 1